--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <label for="name"> Name: </label>
                     <input type="text" id="name" name="name">
                     <button>Это кнопка</button>
+                <label for="checking">Check it: </label>
+                <div id="app-6">
+                    <p>{{checkMessage}}</p>
+                    <input id="checking" v-model="checkMessage">
+                </div>
             </div>
         </div>
     </div>
