add: coindesc API

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="container">
+            <div class="block-two">
+               <div id="app">
+                <h1>Bitcoin Price Index</h1>
+                <div
+                v-for="currency in info"
+                class="currency">{{ currency.description }} : 
+            <span class="lighten">
+                <span v-html="currency.symbol"></span> {{ currency.rate_float | currencydecimal }}
+            </span></div>
+               </div>
+            </div>
+        </div>
     </div>
     <script src="./main.js"></script>
 </body>
