try: Vue components app

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
                     Total: <span>{{total() | currency}}</span>
                 </div>
             </form>
+            <div id="components">
+                <click-counter></click-counter>
+                <click-counter></click-counter>
+            </div>
         </div>
     </div>
     <script src="./main.js"></script>
+    <script src="./comp.js"></script>
 </body>
 </html>
